# ChangeLog for app-emacs/apache-mode
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/apache-mode/ChangeLog,v 1.9 2005/04/21 18:29:12 blubb Exp $

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> apache-mode-1.1.ebuild:
  stable on amd64

  03 Sep 2004; Tom Martin <slarti@gentoo.org> apache-mode-1.1.ebuild:
  Marked ~amd64, resolves #58425. Thanks to Gabriel Ebner <ge@gabrielebner.at>
  for reporting.

  26 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> apache-mode-1.1.ebuild:
  Marked as stable.

*apache-mode-1.1 (18 Jul 2004)

  18 Jul 2004; Mamoru KOMACHI <usata@gentoo.org>
  files/50apache-mode-gentoo.el, +apache-mode-1.1.ebuild:
  Version bumped. Sources are taken from Debian. This closes bug #57098

*apache-mode-1.0 (04 Nov 2002)

  04 Nov 2002; Matthew Kennedy <mkennedy@gentoo.org> ChangeLog,
  apache-mode-1.0.ebuild, files/50apache-mode-gentoo.el,
  files/digest-apache-mode-1.0 :

  Initial import.