@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/blogmax
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/blogmax/ChangeLog,v 1.2 2005/07/01 18:14:57 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/blogmax/ChangeLog,v 1.3 2005/10/24 13:27:31 josejx Exp $
+
+  24 Oct 2005; Joseph Jezak <josejx@gentoo.org> blogmax-20041208.ebuild:
+  Marked ~ppc.
 
   01 Jul 2005; Matthew Kennedy <mkennedy@gentoo.org>
   blogmax-20041208.ebuild:
