@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/cdi
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/cdi/ChangeLog,v 1.5 2005/07/01 18:14:57 mkennedy Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/cdi/ChangeLog,v 1.6 2005/10/24 13:30:53 josejx Exp $
+
+  24 Oct 2005; Joseph Jezak <josejx@gentoo.org> cdi-1.45.ebuild:
+  Marked ~ppc.
 
   01 Jul 2005; Matthew Kennedy <mkennedy@gentoo.org> cdi-1.45.ebuild:
   Keywording ~amd64.
