@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/apache-mode
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/apache-mode/ChangeLog,v 1.9 2005/04/21 18:29:12 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/apache-mode/ChangeLog,v 1.10 2005/10/24 13:24:26 josejx Exp $
+
+  24 Oct 2005; Joseph Jezak <josejx@gentoo.org> apache-mode-1.1.ebuild:
+  Marked ~ppc.
 
   21 Apr 2005; Simon Stelling <blubb@gentoo.org> apache-mode-1.1.ebuild:
   stable on amd64
